# sparrow0hawk.github.io

./: .gitignore  .gitmodules  CNAME  LICENSE  Makefile  README.md  about.html  about.md  atom.xml  config.toml  generate.py  index.html  package-lock.json  package.json  pelicanconf.py  portfolio.html  publishconf.py  pyproject.toml  requirements.txt  robots.txt  search_index.en.js  sitemap.xml  snake.html  testpage.html
about/: index.html
adventures-with-rust-001/: index.html
content/: 2022-03-23-hello_world.md  2022-03-29-adventures-with-rust-001.md  2022-04-15-teaching-python.md  2023-01-07-revealjs-theme.md  2023-03-26-python-gui-pyinstaller.md  2023-03-28-cross-compile-w-gh-actions.md  2023-05-03-leaving_rse.md  2023-05-03-research-software-security-snippet-2.md  2023-05-21-what-ive-been-reading.md  2023-06-08-research-software-security-snippet-2.md  2023-06-18-jekyll-calendar.md  2024-06-01-what-ive-been-reading.md  2024-07-01-what-ive-been-reading.md  2024-08-01-what-ive-been-reading.md  2024-08-20-how-high-haystacks.md  2024-08-31-what-ive-been-reading.md  _index.md  hello.md
cross-compile-w-gh-actions/: index.html
hello-world/: index.html
jekyll-calendar/: index.html
js/: canvas.js  snake.js
learn_rust/: index.html
leaving-rse/: index.html
python-gui-pyinstaller/: index.html
research-software-security-snippet-2/: index.html
revealjs-theme/: index.html
rustnation2023/: index.html
teaching-python/: index.html
templates/: index.html  post.html
tests/: test_execute.py  test_feed.py  test_post.py
what-ive-been-reading/: index.html
(+105 files in other folders)
