[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "blog"
authors = [
    {name = "Alex Coleman", email = "hello@alexjcoleman.me"},
]
version = "0.1.0"
readme = "README.md"
description = "Scripts to build my blog"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.12"

dependencies = [
    "Jinja2~=3.1.0",
    "Markdown~=3.6.0",
]

[project.optional-dependencies]
dev = [
    "black~=24.2.0",
    "isort~=5.13.0",
    "mypy~=1.10.0",
    "pytest~=8.3.0",
    "types-Markdown~=3.6.0",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
